--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="prompt_password">Password</string>
     <string name="action_login">Login</string>
     <string name="action_register">Register?</string>
+    <string name="minibar_time_default">00:00</string>
+    <string name="home_minibar_test_name_song">Co gai den tu hom qua</string>
+    <string name="home_minibar_test_name_author">My Tam</string>
+    <string name="todo">TODO</string>
 </resources>
