--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,18 @@
 <resources>
     <string name="app_name">2018SummerFinal</string>
-    <string name="title_activity_login">Login</string>
     <string name="prompt_phone">Phone</string>
     <string name="prompt_password">Password</string>
     <string name="action_login">Login</string>
     <string name="action_register">Register?</string>
+    <string name="minibar_time_default">00:00</string>
+    <string name="home_minibar_test_name_song">Co gai den tu hom qua</string>
+    <string name="home_minibar_test_name_author">My Tam</string>
+    <string name="todo">TODO</string>
+    <string name="action_sign_up">Sign up</string>
+    <string name="prompt_repeat_password">Repeat Password</string>
+    <string name="prompt_name">Name</string>
+    <string name="prompt_age">Age</string>
+    <string name="map_api_key">AIzaSyAFYsveOdOJB25LC0BgwpoqSwgj4KejkrE</string>
+    <string name="description_menu">menu</string>
+    <string name="log_out">Logout</string>
 </resources>
