--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,17 +13,18 @@
     <string name="home_minibar_test_name_song">Co gai den tu hom qua</string>
     <string name="home_minibar_test_name_author">My Tam</string>
     <string name="todo">TODO</string>
+    <string name="imagebutton">image button not load</string>
     <string name="prompt_repeat_password">Repeat Password</string>
     <string name="prompt_name">Name</string>
    <string name="prompt_age">Age</string>
     <string name="map_api_key">AIzaSyAFYsveOdOJB25LC0BgwpoqSwgj4KejkrE</string>
-    <string name="toolbar_text_hint_search">Nhập Tên bài hát, ca sĩ</string>
-    <string name="toolbar_text_libary">Thư viện nhạc</string>
+    <string name="toolbar_text_hint_search">Input Name, Song, Artist</string>
+    <string name="toolbar_text_libary">Library music</string>
     <string name="description_menu">menu</string>
     <string name="log_out">Logout</string>
     <string name="play_list">playlist</string>
-    <string name="tao_moi">tạo mới</string>
-    <string name="chinh_sua">chỉnh sửa</string>
+    <string name="tao_moi">create new</string>
+    <string name="chinh_sua">Change</string>
     <string name="error_password">Password is 6 or more character and only contains letter and number </string>
     <string name="error_name">Name is fail format</string>
     <string name="error_mail">Mail is fail format</string>
