--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="minibar_time_default">00:00</string>
     <string name="home_minibar_test_name_song">Co gai den tu hom qua</string>
     <string name="home_minibar_test_name_author">My Tam</string>
-    <string name="todo">TODO</string>
+    <string name="imageview">image view not load</string>
     <string name="imagebutton">image button not load</string>
     <string name="prompt_repeat_password">Repeat Password</string>
     <string name="prompt_name">Name</string>
