--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="log_out">Logout</string>
     <string name="play_list">playlist</string>
     <string name="tao_moi">create new</string>
-    <string name="chinh_sua">Change</string>
+    <string name="change_playlist">Change Playlist</string>
     <string name="error_password">Password is 6 or more character and only contains letter and number </string>
     <string name="error_name">Name is fail format</string>
     <string name="error_mail">Mail is fail format</string>
@@ -33,5 +33,5 @@
     <string name="error_not_enough_information">Please, fill up your information</string>
     <string name="error_sign_up">Sign up failed</string>
     <string name="error_upload_image">Upload avatar image is fail</string>
-    <string name="bai_hat">bài hát</string>
+    <string name="song">song</string>
 </resources>
