--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,8 @@
     <string name="error_sign_up">Sign up failed</string>
     <string name="error_upload_image">Upload avatar image is failed</string>
     <string name="error_login">Login fail</string>
+    <string name="error_reset_password">Reset password error</string>
+    <string name="error_load_gallery">Error load gallery</string>
     <string name="song">song</string>
     <string name="your_location">Your location</string>
 </resources>
