--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">2018SummerFinal</string>
     <string name="prompt_mail">Email</string>
     <string name="prompt_password">Password</string>
+    <string name="prompt_music">Artist, Song</string>
     <string name="action_login">Login</string>
     <string name="action_register">Register?</string>
     <string name="action_sign_up">Sign up</string>
