--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,5 +47,5 @@
     <string name="song">song</string>
     <string name="your_location">Your location</string>
     <string name="favourite">Favourite</string>
->>>>>>> master
+    <string name="history">History</string>
 </resources>
