--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,9 @@
     <string name="favourite">Favourite</string>
     <string name="delete_song">Delete Song</string>
     <string name="history">History</string>
+
+    <string name="error_open_camera">Can\'t open camera</string>
+    <string name="error_open_galery">Can\'t open galery</string>
+
+
 </resources>
